force-app/main/default/objects/Visit__c/fields/Front_End_User__c.field-meta.xml
<CustomField>
    <fullName>Front_End_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Front End User</label>
    <referenceTo>Front_End_User__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>