force-app/main/default/objects/Visit__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <defaultValue>&quot;CCM Initial&quot;</defaultValue>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCM Initial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>