force-app/main/default/objects/Visit__c/fields/Visit_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Visit_DateTime__c</fullName>
    <label>Visit DateTime</label>
    <type>DateTime</type>
</CustomField>