force-app/main/default/objects/Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Visit_DateTime__c</columns>
    <columns>Patient__c</columns>
    <columns>Facility__c</columns>
    <columns>Service__c</columns>
    <columns>Not_Seen_Reason__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>